--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   {% include head.html %}
 
-  <body class="layout-reverse">
+  <body class="theme-base-0bs layout-reverse">
     {% include sidebar.html %}
 
     <div class="content container">{{ content }}</div>
