--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
-        <a href="{{ site.baseurl }}"> {{ site.title }} </a>
-      </h1>
+      <h2>Resume</h2>
+      <h3>{{ site.title }}</h3>
       <p class="lead">{{ site.description }}</p>
     </div>
 
@@ -35,7 +34,8 @@
       >
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
-
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <section>
+      <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    </section>
   </div>
 </div>
