--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -46,6 +46,8 @@ html {
 body {
   display: flex;
   justify-content: space-evenly;
+  margin: 0px;
+  padding: 0px;
 }
 
 @media screen and (max-width: 48em) {
@@ -64,6 +66,8 @@ body {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
+  width: 100%;
+  align-content: center;
   color: rgba(255, 255, 255, 0.5);
   background-color: #202020;
 }
@@ -83,11 +87,16 @@ body {
 }
 
 /* About section */
-.sidebar-about h1 {
+.sidebar-about h3 {
   color: #fff;
-  margin-top: 0;
-  font-family: 'Abril Fatface', serif;
-  font-size: 3.25rem;
+  margin-top: 1vh;
+  font-family: Oswald, Lato, Helvetica;
+  font-size: 1.8rem;
+  /* @media (min-width: 48rem) {
+    font-size: 3rem;
+  } */
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
 /* Sidebar nav */
@@ -130,6 +139,9 @@ a.sidebar-nav-item:focus {
   padding-bottom: 5vw;
   padding-left: 3vw;
   padding-right: 3vw;
+  @media screen and (max-width: 48em) {
+    max-width: 100%;
+  }
 }
 
 /*
@@ -145,6 +157,9 @@ a.sidebar-nav-item:focus {
 .layout-reverse .content {
   margin-left: 2vw;
   margin-right: 32vw;
+  @media screen and (max-width: 48em) {
+    margin-right: 0;
+  }
   justify-content: center;
 }
 
@@ -240,9 +255,9 @@ a.sidebar-nav-item:focus {
 
 /* Brand Secondary */
 .theme-base-0bs .sidebar {
-  background-color: #3caeff;
+  background-color: #232a34;
 }
 .theme-base-0bs .content a,
 .theme-base-0bs .related-posts li a:hover {
-  color: #3caeff;
+  color: #232a34;
 }
