Made a pass through on grammar again.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,10 +24,20 @@
       >
       {% endif %} {% endif %} {% endfor %}
 
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/releases/download/latest/document.pdf"
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.pdf"
         >Download Resume (PDF)</a
+      >
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.docx"
+        >Download Resume (Word Document)</a
+      >
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.html"
+        >Download Resume (HTML)</a
+      >
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.json"
+        >Download Resume (JSON)</a
+      >
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.md"
+        >Download Resume (Markdown)</a
       >
       <a class="sidebar-nav-item" href="{{ site.github.repo }}"
         >GitHub project</a
