Moving formats to a directory.  Updated the links to them.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,19 +24,27 @@
       >
       {% endif %} {% endif %} {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.pdf"
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.github.repo }}/formats/index.pdf"
         >Download Resume (PDF)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.docx"
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.github.repo }}/formats/index.docx"
         >Download Resume (Word Document)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.html"
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.github.repo }}/formats/index.html"
         >Download Resume (HTML)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.json"
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.github.repo }}/formats/index.json"
         >Download Resume (JSON)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/index.md"
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/formats/index.md"
         >Download Resume (Markdown)</a
       >
       <a class="sidebar-nav-item" href="{{ site.github.repo }}"
