--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,43 +13,28 @@
         >Home</a
       >
 
-      {% comment %} The code below dynamically generates a sidebar nav of pages
-      with `layout: page` in the front-matter. See readme for usage. {%
-      endcomment %} {% assign pages_list = site.pages %} {% for node in
-      pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
       <a
-        class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="{{ node.url }}"
-        >{{ node.title }}</a
+        class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
+        href="/about"
+        >Home</a
       >
-      {% endif %} {% endif %} {% endfor %}
 
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/formats/index.pdf"
+      <a class="sidebar-nav-item" href="/formats/index.pdf"
         >Download Resume (PDF)</a
       >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/formats/index.docx"
+      <a class="sidebar-nav-item" href="/formats/index.docx"
         >Download Resume (Word Document)</a
       >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/formats/index.html"
+      <a class="sidebar-nav-item" href="/formats/index.html"
         >Download Resume (HTML)</a
       >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/formats/index.json"
+      <a class="sidebar-nav-item" href="/formats/index.json"
         >Download Resume (JSON)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/formats/index.md"
+      <a class="sidebar-nav-item" href="/formats/index.md"
         >Download Resume (Markdown)</a
       >
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}"
-        >GitHub project</a
-      >
+      <a class="sidebar-nav-item" href="">GitHub project</a>
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
     <section>
