--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,22 +16,22 @@
       <a
         class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
         href="/about"
-        >Home</a
+        >About</a
       >
 
-      <a class="sidebar-nav-item" href="/formats/index.pdf"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.pdf"
         >Download Resume (PDF)</a
       >
-      <a class="sidebar-nav-item" href="/formats/index.docx"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.docx"
         >Download Resume (Word Document)</a
       >
-      <a class="sidebar-nav-item" href="/formats/index.html"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.html"
         >Download Resume (HTML)</a
       >
-      <a class="sidebar-nav-item" href="/formats/index.json"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.json"
         >Download Resume (JSON)</a
       >
-      <a class="sidebar-nav-item" href="/formats/index.md"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.md"
         >Download Resume (Markdown)</a
       >
       <a class="sidebar-nav-item" href="">GitHub project</a>
