Updating the sidebar to be dynamic.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,9 +19,13 @@
         >About</a
       >
 
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.pdf"
+      {% assign format_files = site.static_files %} {% for format in
+      format_files %}
+      <a class="sidebar-nav-item" href="{{ format.path }}"
         >Download Resume (PDF)</a
       >
+      {% endfor %}
+
       <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.docx"
         >Download Resume (Word Document)</a
       >
