Fixing about link.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
 
       <a
         class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
-        href="/about"
+        href="{{ site.baseurl }}/about"
         >About</a
       >
 
