Adding github and fixing title.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,9 @@
       <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.md"
         >Download Resume (Markdown)</a
       >
-      <a class="sidebar-nav-item" href="">GitHub project</a>
+      <a class="sidebar-nav-item" href="https://github.com/abarrows"
+        >GitHub project</a
+      >
       <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
     <section>
