--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,8 +19,9 @@
         >About</a
       >
 
+      <h4>Default</h4>
       <a class="sidebar-nav-item" href="{{ format.path }}"
-        >Download Resume (PDF)</a
+        >Download Complete (PDF)</a
       >
 
       <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.docx"
@@ -35,6 +36,29 @@
       <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.md"
         >Download Resume (Markdown)</a
       >
+      <h4>All Achievements and Skills</h4>
+      <a class="sidebar-nav-item" href="{{ format.path }}"
+        >Download Complete (PDF)</a
+      >
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.baseurl }}/formats/complete.docx"
+        >Download Complete (Word Document)</a
+      >
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.baseurl }}/formats/complete.html"
+        >Download Complete (HTML)</a
+      >
+      <a
+        class="sidebar-nav-item"
+        href="{{ site.baseurl }}/formats/complete.json"
+        >Download Complete (JSON)</a
+      >
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/complete.md"
+        >Download Complete (Markdown)</a
+      >
+      <h4>More Information</h4>
       <a class="sidebar-nav-item" href="https://github.com/abarrows"
         >GitHub project</a
       >
