Cleaning up pdf links and anchor text.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,8 +20,8 @@
       >
 
       <h4>Default</h4>
-      <a class="sidebar-nav-item" href="{{ format.path }}"
-        >Download Complete (PDF)</a
+      <a class="sidebar-nav-item" href="{{ format.path }}/formats/index.pdf"
+        >Download Resume (PDF)</a
       >
 
       <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.docx"
@@ -37,7 +37,7 @@
         >Download Resume (Markdown)</a
       >
       <h4>All Achievements and Skills</h4>
-      <a class="sidebar-nav-item" href="{{ format.path }}"
+      <a class="sidebar-nav-item" href="{{ format.path }}/formats/complete.pdf"
         >Download Complete (PDF)</a
       >
       <a
