--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
       >
 
       <h4>Default</h4>
-      <a class="sidebar-nav-item" href="{{ format.path }}/formats/index.pdf"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/index.pdf"
         >Download Resume (PDF)</a
       >
 
@@ -37,7 +37,7 @@
         >Download Resume (Markdown)</a
       >
       <h4>All Achievements and Skills</h4>
-      <a class="sidebar-nav-item" href="{{ format.path }}/formats/complete.pdf"
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/formats/complete.pdf"
         >Download Complete (PDF)</a
       >
       <a
