--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -146,6 +146,23 @@ a.sidebar-nav-item:focus {
   }
 }
 
+/* Tables */
+table {
+  margin-bottom: 1rem;
+  width: 100%;
+  border: 1px solid #e5e5e5;
+  border-collapse: collapse;
+}
+td,
+th {
+  padding: 0.25rem 0.5rem;
+  border: 1px solid #e5e5e5;
+}
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+  background-color: #f9f9f9;
+}
+
 /*
  * Reverse layout
  *
